# dune-alugrid

./: .gitlab-ci.yml  CMakeLists.txt  README.md  TODO  autogen.sh  dune.module
cmake/modules/: DuneAlugridMacros.cmake
dune/alugrid/: dgf.hh
dune/alugrid/3d/: CMakeLists.txt  alu3dinclude.hh  alugrid.cc  alugrid.hh  alugridexpltemplates.hh  entity.hh  entity_imp.cc  entityexpltemp.hh  entityseed.hh  faceutility.cc  faceutility.hh  faceutility_imp.cc  geometry.hh  geometry_imp.cc  geometryexpltemp.hh  grid.hh  grid_imp.cc  gridfactory.cc  gridfactory.hh  gridfactory_imp.cc  gridfactoryexpltemp.hh  gridview.hh  indexsets.hh  iterator.cc  iterator.hh  iterator_imp.cc  iteratorexpltemp.hh  nonconfmappings.cc  nonconfmappings.hh  topology.cc  topology.hh
dune/alugrid/common/: CMakeLists.txt  bisectioncompatibility.hh  capabilities.hh  defaultindexsets.hh  faceconsistency.hh  macrogridview.hh  memory.hh  meshquality.hh  structuredgridfactory.hh  twists.hh
dune/alugrid/impl/: CMakeLists.txt  indexstack.h  macrofileheader.hh
dune/alugrid/impl/duneinterface/: gitter_dune_impl.h  gitter_dune_pll_impl.cc
dune/alugrid/impl/parallel/: gitter_hexa_top_pll.cc  gitter_hexa_top_pll.h  gitter_pll_impl.cc  gitter_pll_impl.h  gitter_pll_mgb.cc  gitter_pll_mgb.h  gitter_pll_sti.cc  gitter_tetra_top_pll.cc  gitter_tetra_top_pll.h
dune/alugrid/impl/serial/: CMakeLists.txt  ghost_elements.cc  ghost_info.cc  ghost_info.h  gitter_geo.cc  gitter_hexa_top.cc  gitter_hexa_top.h  gitter_impl.cc  gitter_impl.h  gitter_mgb.cc  gitter_mgb.h  gitter_sti.cc  gitter_sti.h  gitter_tetra_top.cc  gitter_tetra_top.h  mapp_tetra_3d.h  mappings.cc  mappings.hh  myalloc.cc  myalloc.h  parallel.h  refinementrules.h  serialize.h
dune/alugrid/impl/test/: CMakeLists.txt  adapt.cc  backuprestore.cc  threadsafety.cc
dune/alugrid/impl/test/grids/: reference.tetra  testgrid.tetra
dune/alugrid/test/: CMakeLists.txt  insertgrid.hh  test-alugrid.cc  test-backup-restore.cc  test-dgf.cc  test-entityobj.cc  test-iterators.cc  test-structuredgridfactory.cc  test-virtualizedgrid.cc
dune/alugrid/test/dgf/: CMakeLists.txt  cube-testgrid-2-2.dgf  cube-testgrid-2-3.dgf  cube-testgrid-3-3-inconsistent.dgf  moebius-simple.dgf  periodic-2d.dgf  periodic2.dgf  periodic3.dgf  reference-cube-3-3.dgf  reference-simplex-2-2.dgf  reference-simplex-3-3.dgf  simple-moebius.dgf  simplex-testgrid-3-3.dgf  twisted-torus.dgf
examples/: cachedcommmanager.hh  piecewisefunction.hh  problem-transport.hh
examples/dgf/: periodic2.dgf  periodic3.dgf  unitcube2d.dgf
examples/quality/: CMakeLists.txt
lib/: CMakeLists.txt
python/: CMakeLists.txt  setup.py.in
python/dune/alugrid/: CMakeLists.txt  _grids.py  registeralugrid_22_cube.cc  registeralugrid_22_simplex.cc  registeralugrid_33_cube.cc  registeralugrid_33_simplex.cc
utils/bisection-compatibility/: CMakeLists.txt
utils/convert-macrogrid/: main.cc
